Made changes to HTML files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <form class="login">
                     <div class="login__field">
                         <i class="login__icon fas fa-user fa-sm"></i>
-                        <input type="text" class="login__input" name="username" placeholder="User name/Email">
+                        <input type="text" class="login__input" name="username" placeholder="User Name/Email">
                     </div>
                     <div class="login__field">
                         <i class="login__icon fas fa-lock fa-sm"></i>
