Changes to stylesheet of index

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                         <span class="button-text">Log in</span>
                     </button>
                     <div class="forgot-password-field">
-                        <a href="#" class="forgot-password-field-text">Forgot Username or Password?</a>
+                        <a href="#">Forgot Username or Password?</a>
                     </div>
                     <div class="signup-text">
-                        <p>Don't have an account? <a href="#" class="signup-text-link">Sign up</a></p>
+                        <p>Don't have an account? <a href="#">Sign up</a></p>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <script src="js/scripts.js"></script>
 </body>
 </html>    
