--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>Login</title>
     <meta charset="UTF-8"/>
     <meta name="author" content="jeswin"/>
     <meta name="description" content="online pharmaceutical website"/>
